Novo desing das paginas

--- a/Frontend_Sistema_RISO/Cadastros/alterar_cadastro_cliente.html
+++ b/Frontend_Sistema_RISO/Cadastros/alterar_cadastro_cliente.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Clientes</title>
+    <title>Alterar dados de Clientes</title>
     <!----css login---->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -38,8 +38,7 @@
     <div class="container d-flex justify-content-center align-items-center">
         <div class="col-md-6 d-flex align-items-center">
           <div class="cadastro_cliente-container w-100">
-            <h2 class="text-center mb-4">Cadastro de Clientes</h2>
-
+            <h2 class="text-center mb-4">Alterar Dados de:</h2> <!--{{ cliente.nome }}</h2>-->
         <form>
             
             <div class="mb-3">
@@ -73,11 +72,11 @@
         </div>
 
         <div class="text-center mb-3">
-            <a href="home.html" type="button" class="btn rounded-pill text-white" style="background-color: #2C4158;width: 100%;">Cadastrar Cliente</a>
+            <a href="home.html" type="button" class="btn rounded-pill text-white" style="background-color: #2C4158;width: 100%;">Alterar dados</a>
         </div>
 
         <div class="text-center mb-3">
-            <a href="home.html" type="button"  class="btn rounded-pill text-white" style="background-color: #B6202A;width: 100%;">Cancelar Cadastro </a>
+            <a href="home.html" type="button"  class="btn rounded-pill text-white" style="background-color: #B6202A;width: 100%;">Cancelar </a>
         </div>
 
         </form>
