--- a/Frontend_Sistema_RISO/Login/login.html
+++ b/Frontend_Sistema_RISO/Login/login.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
-
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Login_riso_recuperadora </title>
-    <!---Bootstraps--->
+    <!-- Bootstraps -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!---------------->
-    <link rel="stylesheet" type="text/css" href="login.css">
-</head>
+    <meta charset="UTF-8">
+    <title>Login_riso_recuperadora</title>
+    <style>
+        body {
+            margin: 10;
+            font-family: Arial, sans-serif;
+            background-color: #1d2229;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
 
-<html>
+        .login-container {
+            background-color: #cfcfcf;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px #000;
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .form-control::placeholder {
+            color: #aaa;
+        }
+
+        .logo img {
+            max-height: 130px;
+            margin-bottom: 0px;
+        }
+    </style>
+</head>
 <body>
-    <div class="container d-flex justify-content-center align-items-center">
-          <div class="col-md-6 d-flex align-items-center">
-            <div class="login-container w-100">
-              <h4 class="text-center mb-4">Login</h4>
-              <form>
-                <div class="mb-3">
-                  <label class="form-label">Usuário</label>
-                  <input type="text" class="form-control rounded-pill" placeholder="Digite seu usuário aqui">
-                </div>
-                <div class="mb-3">
-                  <label class="form-label">Senha</label>
-                  <input type="password" class="form-control rounded-pill" placeholder="Digite sua senha aqui">
-                </div>
-                <div class="mb-3 text-center">
-                  <small>Não lembra a senha?<br><a href="esqueci_senha.html">Esqueci minha senha</a></small>
-                </div>
-                <div class="d-grid">
-                  <div class = "text-center">
-                  <button type="submit" class="btn btn-yellow rounded-pill">Entrar</button>
-                </div>
-                </div>
-              </form>
+    <div class="logo">
+        <img src="imagem/images.png" alt="Logo RISO" class="img-fluid " >
+    </div>
+
+    <div class="login-container">
+        <h4 class="mb-4">Login</h4>
+        <form>
+            <div class="mb-3 text-left">
+                <label class="form-label">Usuário</label>
+                <input type="text" class="form-control rounded-pill" placeholder="Digite seu usuário aqui" required>
             </div>
-          </div>
-          <div class="col-md-6 d-none d-md-flex align-items-center justify-content-center">
-            <img src="imagem/images.png" alt="Logo RISO" class="img-fluid" style="max-height: 1000px;">
-          </div>
-      </div>
+            <div class="mb-3 text-left">
+                <label class="form-label">Senha</label>
+                <input type="password" class="form-control rounded-pill" placeholder="Digite sua senha aqui" required>
+            </div>
+            <div class="mb-3">
+                <small>Não lembra a senha?<br><a href="esqueci_senha.html">Esqueci minha senha</a></small>
+            </div>
+            <div class="text-center">
+                <a href="home.html" type="button" class="btn rounded-pill text-white" style="background-color: #2C4158;">Entrar</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
